# chunkee

./: .gitignore  Cargo.toml  README.md  magick.md
chunkee-core/: Cargo.toml  GEMINI.md
chunkee-core/src/: aabb.rs  block.rs  chunk.rs  chunk_view.rs  clipmap.rs  coords.rs  dag.rs  generation.rs  grid.rs  hasher.rs  lib.rs  manager.rs  meshing.rs  metrics.rs  metrics.txt  pipeline.rs  storage.rs  streaming.rs  sv64.rs  tmp.rs  traversal.rs  world.rs
chunkee-godot/: Cargo.toml
chunkee-godot/src/: conversions.rs  generator.rs  lib.rs  voxels.rs
godot/: Chunkee.gdextension  Chunkee.gdextension.uid  icon.svg.import  main.tscn  project.godot
godot/chunkee-godot/: Cargo.toml
godot/chunkee-godot/src/: conversions.rs  generator.rs  lib.rs  timings  voxels.rs
godot/scripts/: CameraController.gd  CameraController.gd.uid  PlayerController.gd  PlayerController.gd.uid
godot/shaders/: voxel.gdshader  voxel.gdshader.uid  voxel_labor_pbr.gdshader  voxel_labor_pbr.gdshader.uid  voxel_opaque.gdshader  voxel_transparent.gdshader  voxel_transparent.gdshader.uid
godot/textures/: texture_array.png.import
perf/: 10-30-25 (fxhash).tracy  11-3-25 (no-mesh-empty-or-obscured-hot).tracy
