[package]
name = "chunkee-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
block-mesh = "0.2.0"
bytemuck = "1.23.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
glam = "0.30.4"
log = "0.4.27"
lru = "0.16.0"
lz4 = "1.28.1"
meshopt = "0.5.0"
mikktspace = "0.3.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
sled = "0.34.7"
