[package]
name = "chunkee-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
block-mesh = "0.2.0"
bytemuck = "1.23.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
fxhash = "0.2.1"
glam = "0.30.4"
log = "0.4.27"
lru = "0.16.0"
lz4 = "1.28.1"
mikktspace = "0.3.0"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
sled = "0.34.7"
tracing = { version="0.1.41", optional = true }

[features]
profile = ["dep:tracing"]
