[package]
name = "chunkee-godot"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = "0.4.5"
chunkee-core = { path = "../chunkee-core" }
noise = "0.9.0"
dashmap = "6.1.0"
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", optional = true }
tracing-tracy = { version = "0.11.4", optional = true }
bytemuck = "1.24.0"
fxhash = "0.2.1"

[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = "0.6.1"
tikv-jemalloc-ctl = { version = "0.6.1", features = ["stats"] }

[features]
profile = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-tracy",
    "tracing-tracy/enable",
    "chunkee-core/profile",
]
